--- a/index.html
+++ b/index.html
@@ -4,42 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abhishek Garage</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="
+   https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
-    <div class="menu">
-        <ul>
-            <li class="active"><a href="#">Garage</a></li>
-
-             <li><a href="#">Supercars</a>
-            <div class="car-ddmenu">
-                <ul>
-                    <li><a href="#">Maclaren</a></li>
-                    <li><a href="#">Ferrari</a></li>
-                    <li><a href="#">lambogini</a>
-                    <div class="lamb">
-                        <ul>
-                            <li><a href="#">Adventador</a></li>
-                            <li><a href="#">Murcielago</a></li>
-                        </ul>
-                    </div>
-                    </li>
-                </ul>
+    <header>
+        <nav>
+            <div class="logo"> <h1 class="animate__animated animate__heartBeat"> Mere bharat</h1></div>
+            <div class="menu">
+                <a href="#">Home</a>
+                <a href="#">gallary</a>
+                <a href="#">about</a>
+                <a href="#">contact</a>
             </div>
-            </li>
-            <li><a href="#">Superbikes</a>
-            <div class="bike-ddmenu">
-                <ul>
-                    <li><a href="#">MV agusta</a></li>
-                    <li><a href="#">Ducati</a></li>
-                    <li><a href="#">Kawsaki</a></li>
-                </ul>
-            </div>
-            </li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </div>
+        </nav>
+            <main>
+                <section>
+                    <h3>Welcome to India</h3>
+                    <h1>Do come & visit <span class="change-content"></span></h1> 
+                    <p>"India once is not enough"</p>
+                    <a href="#" class="btnone">learn more</a>
+                    <a href="#" class="btntwo">signup here</a>
+                </section>
+            </main>
+    </header>
 </body>
-</html>
+</html>*\
